# fptc-lib

./: CMakeLists.txt
src/: fptc.h
tests/: test.c
